--- a/.github/workflows/validation-bruno.yml
+++ b/.github/workflows/validation-bruno.yml
@@ -20,5 +20,6 @@ on:
 jobs:
   Run-Dev-Tests:
     uses: HMHansson/ICA-DevOps/.github/workflows/validation-bruno.yml@main
+    secrets: inherit
     with:
       environment: Development
