--- a/.github/workflows/promote-test.yml
+++ b/.github/workflows/promote-test.yml
@@ -16,7 +16,7 @@ on:
     branches:
       - test
     paths:
-      - 'assets/do_not_promote/**'
+      - 'assets/**'
 
 jobs:
   # -------------------------------
