--- a/.github/workflows/promote-production.yml
+++ b/.github/workflows/promote-production.yml
@@ -16,7 +16,7 @@
       branches:
         - production
       paths:
-        - 'assets/do_not_promote/**'
+        - 'assets/**'
   
   jobs:
     # -------------------------------
