--- a/test/TestCollection/.env_sample
+++ b/test/TestCollection/.env_sample
@@ -1,5 +1,7 @@
-# --------------------------------------
+# ------------------------------------------------------------------------
 # -- Copy to .env and fill in passwords
-# --------------------------------------
+# These are user passwords for the ability to run collections without
+# hardcoding the credentials in the environment files (which are stored in git)
+# ------------------------------------------------------------------------
 B2B_PASSWORD=XXXXXXXXXXXXXXXXXXX
 WMIO_PASSWORD=XXXXXXXXXXXXXXXXXX
